# teacher-student

./: .env.example  .gitattributes  .gitignore  README.md  package.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: health.py  overview.py  platform.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/integrations/bisheng/: __init__.py  base.py  fake.py
backend/app/schemas/: platform.py
backend/app/services/: platform_store.py
backend/tests/: test_health.py  test_overview.py  test_platform.py
docs/development/: local-setup.md
docs/superpowers/plans/: 2026-06-24-education-agent-platform-implementation-plan.md
docs/superpowers/specs/: 2026-06-24-education-agent-platform-design.md  2026-06-24-mvp-feature-loop-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  providers.tsx
frontend/src/app/layout/: AppShell.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/data/: platform.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/pages/admin/: AdminDashboard.tsx
frontend/src/pages/student/: StudentDashboard.tsx
frontend/src/pages/teacher/: TeacherDashboard.tsx
frontend/src/routes/: router.tsx
frontend/src/styles/: global.css
infra/: docker-compose.yml
scripts/: check.ps1  dev-backend.ps1  dev-frontend.ps1
(+2 files in other folders)
